# savvy

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml  test.yml
app/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
app/e2e/: annotated.spec.ts
app/e2e/helpers/: annotate.d.ts  annotate.mjs
app/scripts/: record-demo.mjs
app/src/: App.css  App.test.tsx  App.tsx  api.ts  index.css  main.tsx
app/src/components/: ColumnTable.test.tsx  ColumnTable.tsx  FileUpload.test.tsx  FileUpload.tsx  SummaryBar.test.tsx  SummaryBar.tsx
app/src/hooks/: useTheme.ts
app/src/styles/: font.css  tokens.css
app/src/test/: setup.ts
app/src/types/: index.ts
app/src/utils/: previewValues.test.ts  previewValues.ts
backend/: config.toml  main.py  models.py  spss.py
tests/: conftest.py  test_export.py  test_file.py
