[project]
name = "savvy"
version = "0.1.0"
description = "Local browser-based tool for working with SPSS survey files"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pyreadstat>=1.2",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ty>=0.0.1a0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
